trying to fix overlap problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,7 +61,8 @@ a:hover small {
 }
 
 .wrapper {
-  width:1080px;
+  display:block;
+  width:100%;
   margin:0 auto;
 }
 
